исправлены фото сотрудников

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
           <li>
             <a href="">
               <img
-                src="./img/img1.jpg"
-                alt="Фото сотрудника"
+                src="./img/employee1.jpg"
+                alt="Фото сотрудника Игорь Демьяненко"
                 width="270"
                 height="260"
               />
@@ -114,8 +114,8 @@
           <li>
             <a href="">
               <img
-                src="./img/img2.jpg"
-                alt="Фото сотрудника"
+                src="./img/employee2.jpg"
+                alt="Фото сотрудника Ольга Репина"
                 width="270"
                 height="260"
               />
@@ -126,8 +126,8 @@
           <li>
             <a href="">
               <img
-                src="./img/img3.jpg"
-                alt="Фото сотрудника"
+                src="./img/employee3.jpg"
+                alt="Фото сотрудника Николай Тарасов"
                 width="270"
                 height="260"
               />
@@ -138,8 +138,8 @@
           <li>
             <a href="">
               <img
-                src="./img/img4.jpg"
-                alt="Фото сотрудника"
+                src="./img/employee4.jpg"
+                alt="Фото сотрудника Михаил Ермаков"
                 width="270"
                 height="260"
               />
